Fix Depends field for hwctl and tests

--- a/client/debian/control
+++ b/client/debian/control
@@ -47,12 +47,7 @@ Description: Library for querying Ubuntu hardware certification status - Rust so
 Package: hwctl
 Architecture: amd64
 Multi-Arch: foreign
-Depends: kmod,
-         libssl-dev,
-         lsb-release,
-         pkgconf,
-         ${misc:Depends},
-         ${shlibs:Depends}
+Depends: kmod, lsb-release, ${misc:Depends}, ${shlibs:Depends}
 Description: CLI tool for checking Ubuntu hardware certification status - Rust source code
  A command-line interface that checks whether your hardware has been certified
  for use with Ubuntu. It uses the hwlib library to collect system information
