--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -19,6 +19,7 @@ name = "hwlib"
 crate-type = [ "cdylib", "rlib",]
 
 [dependencies]
+os-release = { version = "0.1.0" }
 serde_json = "~1.0.0"
 reqwest = { version = "0.12.0", features = ["json"] }
 serde = { version = "~1.0.0", features = ["derive"] }
