Add AppArmor profile and autopkgtest for it

--- a/.github/workflows/test_hwlib_debian_build.yaml
+++ b/.github/workflows/test_hwlib_debian_build.yaml
@@ -89,6 +89,7 @@ jobs:
           ubuntu-dev-tools \
           distro-info-data \
           dh-cargo \
+          dh-apparmor \
           pkg-config \
           libssl-dev
     - uses: actions-rs/toolchain@v1
