--- a/client/debian/control
+++ b/client/debian/control
@@ -23,7 +23,7 @@ Rules-Requires-Root: no
 Package: hwctl
 Architecture: amd64
 Multi-Arch: foreign
-Depends: coreutils, kmod, lsb-release, ${misc:Depends}, ${shlibs:Depends}
+Depends: kmod, lsb-release, ${misc:Depends}, ${shlibs:Depends}
 Description: Tool for checking Ubuntu hardware certification status - Rust source code
  A command-line interface that checks whether your hardware has been certified
  for use with Ubuntu. It uses the hwlib library to collect system information
