--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,10 +1,25 @@
 [workspace]
-members = [
-    "hwctl",
-    "hwlib"
-]
+members = ["hwctl", "hwlib"]
 resolver = "2"
-exclude = ["rust-vendor",]
+exclude = ["rust-vendor"]
+
+[workspace.package]
+license = "GPL-3.0-only"
+version = "0.9.1"
+edition = "2021"
+authors = [
+    "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>",
+    "Nadzeya Hutsko <nadzeya.hutsko@canonical.com>",
+    "Matias Piipari <matias.piipari@canonical.com>",
+]
+documentation = "https://github.com/canonical/hardware-api/"
+homepage = "https://github.com/canonical/hardware-api/"
+repository = "https://github.com/canonical/hardware-api/"
+
+[workspace.dependencies]
+anyhow = "~1.0.0"
+serde_json = "~1.0.0"
+tokio = { version = "1.43.1", default-features = false }
 
 [workspace.metadata.vendor-filter]
 platforms = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
