--- a/client/hwctl/Cargo.toml
+++ b/client/hwctl/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "hwctl"
 description = "hwlib backed CLI tool for collecting and sending hardware information to hwapi to find testing status of device models"
-license = "GPL-3.0-only"
-version = "0.9.1"
-edition = "2021"
+license.workspace = true
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+documentation.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 [package.metadata.vendor-filter]
 platforms = ["*-unknown-linux-gnu"]
@@ -11,7 +15,7 @@ tier = "2"
 all-features = false
 
 [target.'cfg(target_os = "linux")'.dependencies]
-tokio = { version = "1.38.0", features = ["rt", "macros"], default-features = false }
+tokio = { workspace = true, features = ["rt", "macros"] }
 hwlib = { path = "../hwlib" }
-serde_json = "~1.0.0"
-anyhow = "~1.0.0"
+serde_json = { workspace = true }
+anyhow = { workspace = true }
