--- a/client/hwctl/Cargo.toml
+++ b/client/hwctl/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hwctl"
 description = "hwlib backed CLI tool for collecting and sending hardware information to hwapi to find testing status of device models"
-license.workspace = true
+license = "GPL-3.0-only"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
