--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -25,12 +25,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: "true"
+      - name: Create Docker config with mirror
+        run: |
+          MIRROR_URL="${DOCKERHUB_MIRROR:-https://github-runner-dockerhub-cache.canonical.com:5000}"
+          mkdir -p ~/.docker
+          echo "{\"registry-mirrors\": [\"${MIRROR_URL}\"]}" > ~/.docker/daemon.json
+          echo '[registry."docker.io"]' > $GITHUB_WORKSPACE/buildkitd.toml
+          echo "  mirrors = [\"${MIRROR_URL}\"]" >> $GITHUB_WORKSPACE/buildkitd.toml
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v3
         with:
-          config-inline: |
-            [registry."docker.io"]
-              mirrors = ["https://github-runner-dockerhub-cache.canonical.com:5000"]
+          buildkitd-config: ${{ github.workspace }}/buildkitd.toml
       - name: Install docker-compose
         run: |
           COMPOSE_URL="https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)"
