--- a/.github/workflows/package_client.yaml
+++ b/.github/workflows/package_client.yaml
@@ -36,7 +36,7 @@ jobs:
           persist-credentials: false
       - name: Build
         id: snapcraft
-        uses: canonical/snapcraft-multiarch-action@v1
+        uses: canonical/snapcraft-multiarch-action@64be34b955c6f5085a086ab4e299e9f483652dee # v1.10.0
         with:
           path: client
           architecture: ${{ matrix.arch }}
@@ -55,7 +55,7 @@ jobs:
           path: ${{ steps.snapcraft.outputs.snap }}
       - name: Publish
         if: github.ref == 'refs/heads/main'
-        uses: snapcore/action-publish@v1
+        uses: snapcore/action-publish@214b86e5ca036ead1668c79afb81e550e6c54d40 # v1.2.0
         env:
           SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_STORE_LOGIN }}
         with:
