--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -78,7 +78,7 @@ jobs:
         with:
           persist-credentials: false
       - name: Install poetry
-        run: pipx install poetry
+        run: pip install poetry
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
