--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -54,6 +54,9 @@ jobs:
     runs-on: [self-hosted, linux, large, noble, x64]
     if: github.event_name == 'pull_request'
     needs: [test]
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - name: Download build tests coverage report
         uses: actions/download-artifact@v4
