--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -1,11 +1,10 @@
-name: Check CLA
+name: cla-check
 permissions:
   contents: read
 on: [pull_request]
 
 jobs:
   cla-check:
-    name: Check CLA
     runs-on: ubuntu-latest
     permissions:
       pull-requests: read
