Remove debian/vendor-rust.sh due to coreos#122 being fixed

--- a/.github/workflows/test_hwlib_debian_build.yaml
+++ b/.github/workflows/test_hwlib_debian_build.yaml
@@ -96,7 +96,7 @@ jobs:
       - name: Vendor the dependencies
         run: |
           cargo install cargo-vendor-filterer
-          ./debian/vendor-rust.sh
+          cargo vendor-filterer rust-vendor
       - name: Generate checksums
         run: ./debian/generate_checksums.py
       - run: dpkg-buildpackage -us -uc -S
