--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -41,7 +41,7 @@ jobs:
       - run: cargo install cargo-vendor-filterer
       - name: Vendor the dependencies
         run: |
-          ./debian/vendor-rust.sh
+          cargo vendor-filterer rust-vendor
           cat >>~/.cargo/config.toml << __CONFIG__
           [source.crates-io]
           replace-with = "vendored-sources"
