--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -23,7 +23,9 @@ serde_json = "~1.0.0"
 platforms = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
 tier = "2"
 all-features = false
-exclude-crate-paths = [ { name = "*", exclude = "tests" },
-                        { name = "*", exclude = "examples" },
+exclude-crate-paths = [ { name = "*", exclude = "examples" },
+                        { name = "*", exclude = "test" },
+                        { name = "*", exclude = "tests" },
                         { name = "*", exclude = "test-data" },
+                        { name = "*", exclude = "benches" },
                       ]
