Fix lintian warning: uses-debhelper-compat-file

--- a/client/debian/control
+++ b/client/debian/control
@@ -3,6 +3,7 @@ Section: rust
 Priority: optional
 Build-Depends: cargo:native (>= 1.75),
                debhelper (>= 12),
+               debhelper-compat (= 12),
                dh-apparmor,
                dh-cargo (>= 23),
                libssl-dev,
