--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -51,7 +51,7 @@ jobs:
     runs-on: [self-hosted, linux, large, noble, x64]
     defaults:
       run:
-        working-directory: client/hwlib
+        working-directory: client
     needs: lint-and-test
     steps:
       - uses: actions/checkout@v4
