--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-hwlib = { path = "client/hwlib" }
+hwlib = { path = "client" }
 anyhow = "1.0"
 simple_test_case = "1.2.0"
 serde_json = "1.0.0"
