--- a/.github/workflows/charm-check-libs.yaml
+++ b/.github/workflows/charm-check-libs.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write
+      pull-requests: write  # necessary to add library status label
     steps:
       - name: Checkout
         uses: actions/checkout@v4
