--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -58,7 +58,7 @@ jobs:
     needs: [test]
     permissions:
       contents: read
-      pull-requests: write
+      pull-requests: write  # necessary to write coverage comment
     steps:
       - name: Download build tests coverage report
         uses: actions/download-artifact@v4
