ci: add concurrency definition

--- a/.github/workflows/charm-check-libs.yaml
+++ b/.github/workflows/charm-check-libs.yaml
@@ -4,6 +4,9 @@ permissions:
 on:
   pull_request:
     paths: [.github/workflows/charm-check-libs.yaml, server/charm/**]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   check:
