--- a/.github/workflows/publish_server.yaml
+++ b/.github/workflows/publish_server.yaml
@@ -11,6 +11,9 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 0 * * 0" # Rebuild every Sunday at 00:00
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   REGISTRY: ghcr.io
