ci: add pybindings feature to maturin

--- a/client/tox.ini
+++ b/client/tox.ini
@@ -10,7 +10,7 @@ deps =
     pytest
     maturin
 commands_pre =
-    {envbindir}/maturin develop
+    {envbindir}/maturin develop --features pybindings
 commands =
     {envbindir}/python -m black --check pytests/
     {envbindir}/python -m ruff check pytests/
