ci: Simplify workflow dependencies (#460)
* ci: add zizmor.yml

* chore: format workflows

* ci: pin actions or canonical actions to ref

these are allowed to be pinned to a ref in our policy

* ci: use zizmor action

--- a/.github/workflows/charm-check-libs.yaml
+++ b/.github/workflows/charm-check-libs.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write  # necessary to add library status label
+      pull-requests: write # necessary to add library status label
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -22,7 +22,7 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
       - name: Check libraries
-        uses: canonical/charming-actions/check-libraries@1753e0803f70445132e92acd45c905aba6473225 # 2.7.0
+        uses: canonical/charming-actions/check-libraries@2.7.0
         with:
           charm-path: server/charm
           credentials: ${{ secrets.CHARMHUB_TOKEN }}
