chore: put posargs after all other arguments

--- a/server/charm/tox.ini
+++ b/server/charm/tox.ini
@@ -54,8 +54,8 @@ commands =
                  --tb native \
                  -v \
                  -s \
-                 {posargs} \
-                 {[vars]tests_path}/unit
+                 {[vars]tests_path}/unit \
+                 {posargs}
     coverage report
 
 [testenv:integration]
@@ -70,5 +70,5 @@ commands =
            -s \
            --tb native \
            --log-cli-level=INFO \
-           {posargs} \
-           {[vars]tests_path}/integration
+           {[vars]tests_path}/integration \
+           {posargs}
