feat: build charm with uv

--- a/server/charm/charmcraft.yaml
+++ b/server/charm/charmcraft.yaml
@@ -42,8 +42,9 @@ charm-libs:
 
 parts:
   hardware-api:
-    plugin: charm
+    plugin: uv
     source: .
+    build-snaps: [astral-uv]
 
 config:
   options:
